@@ -19,6 +19,7 @@ Robert Ferguson
 Thomas Karsten
 Jürgen Killian
 Jonathan Koch
+David Kolanus
 Uma Kompella
 Jean-François Leon
 Andreas Leuschner
